--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -35,3 +35,17 @@ springdoc.swagger-ui.operationsSorter=method
 logging.level.com.cinema=DEBUG
 logging.level.org.springframework.web=INFO
 logging.level.org.hibernate=INFO
+
+# Email Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=doha.bouhali@etud.iga.ac.ma
+spring.mail.password=kike jrjx tmeb frud
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=3000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# Frontend URL for Reset Link
+app.frontend.url=http://localhost:5173
