Remove sensitive information from application.properties
Removed sensitive API key and email password from application.properties.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 # TMDB API Configuration
-tmdb.api.key=18890ed9556b939ea604f6ab32cd1db1
+tmdb.api.key=
 tmdb.api.base-url=https://api.themoviedb.org/3
 tmdb.api.image-base-url=https://image.tmdb.org/t/p
 
@@ -40,7 +40,7 @@ logging.level.org.hibernate=INFO
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=doha.bouhali@etud.iga.ac.ma
-spring.mail.password=kike jrjx tmeb frud
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
